Update sorting and data loading to include transfer_type field

--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -1449,6 +1449,7 @@
                             transaction_id: t.transaction_id || '',
                             amount: parseFloat(t.amount) || 0,
                             direction: t.direction || '',
+                            transfer_type: t.transfer_type || '',
                             timestamp: t.blocktime || 0
                         };
                     });
