--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -817,6 +817,15 @@
             return new Intl.NumberFormat('en-US', {
                 style: 'currency',
                 currency: 'USD',
+                minimumFractionDigits: 0,
+                maximumFractionDigits: 0
+            }).format(amount);
+        }
+        
+        function formatAmountWithDecimals(amount) {
+            return new Intl.NumberFormat('en-US', {
+                style: 'currency',
+                currency: 'USD',
                 minimumFractionDigits: 2,
                 maximumFractionDigits: 2
             }).format(amount);
