Add countdown and Join Presale button HTML elements to header

--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -726,6 +726,15 @@
 <body>
     <div class="container">
         <div class="header">
+            <div class="header-top-right">
+                <div class="presale-countdown">
+                    <div class="presale-countdown-label">Presale Ends</div>
+                    <div class="presale-countdown-time" id="presaleEndCountdown">--:--:--:--</div>
+                </div>
+                <a href="https://app.legion.cc?homie=E2EFA43C" target="_blank" rel="noopener noreferrer" class="join-presale-btn">
+                    Join Presale
+                </a>
+            </div>
             <h1>Solstice Presale</h1>
             
             <div class="progress-card">
