--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -47,8 +47,8 @@
             top: 20px;
             right: 20px;
             display: flex;
-            flex-direction: column;
-            align-items: flex-end;
+            flex-direction: row;
+            align-items: center;
             gap: 12px;
         }
 
