Make fonts uniform and all text uppercase throughout dashboard

--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -23,6 +23,9 @@
             padding: 0;
             color: #ffffff;
             margin: 0;
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .container {
@@ -67,13 +70,13 @@
             opacity: 0.8;
             margin-bottom: 4px;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
+            font-weight: 700;
         }
 
         .presale-countdown-time {
             font-weight: 700;
             font-size: 1.1em;
-            font-family: 'Courier New', monospace;
         }
 
         .join-presale-btn {
@@ -107,7 +110,8 @@
             margin-bottom: 15px;
             font-size: 3em;
             font-weight: 800;
-            letter-spacing: -1px;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
         }
 
         .program-info {
@@ -115,7 +119,6 @@
             font-size: 0.9em;
             margin-bottom: 20px;
             word-break: break-all;
-            font-family: 'Courier New', monospace;
         }
 
         .stats-grid {
@@ -147,8 +150,8 @@
             color: rgba(255, 255, 255, 0.7);
             margin-bottom: 12px;
             text-transform: uppercase;
-            letter-spacing: 2px;
-            font-weight: 600;
+            letter-spacing: 1.5px;
+            font-weight: 700;
         }
 
         .stat-card .value {
@@ -164,6 +167,9 @@
         .stat-card .subtitle {
             font-size: 0.85em;
             color: rgba(255, 255, 255, 0.6);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
         .progress-card {
@@ -187,9 +193,9 @@
         .progress-title {
             font-size: 1.2em;
             color: rgba(255, 255, 255, 0.9);
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
         }
 
         .progress-amount {
@@ -270,6 +276,9 @@
             margin-top: 15px;
             font-size: 0.9em;
             color: rgba(255, 255, 255, 0.7);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
         .chart-card {
@@ -291,6 +300,8 @@
             font-size: 1.5em;
             font-weight: 700;
             margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
         }
 
         .chart-container {
@@ -314,8 +325,10 @@
             color: rgba(255, 255, 255, 0.9);
             cursor: pointer;
             font-size: 0.9em;
-            font-weight: 600;
+            font-weight: 700;
             transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .timeframe-btn:hover {
@@ -338,6 +351,9 @@
             margin-top: 15px;
             font-size: 0.85em;
             color: rgba(255, 255, 255, 0.7);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
         .chart-legend-item {
@@ -368,7 +384,8 @@
             color: rgba(255, 255, 255, 0.6);
             margin-bottom: 8px;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
+            font-weight: 700;
         }
 
         .main-content {
@@ -395,6 +412,9 @@
             margin-bottom: 15px;
             padding-bottom: 15px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
         .filters-section {
@@ -418,9 +438,9 @@
             font-size: 0.85em;
             color: rgba(255, 255, 255, 0.7);
             margin-bottom: 10px;
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
         }
 
         .filter-input,
@@ -432,6 +452,9 @@
             font-size: 0.9em;
             color: #ffffff;
             transition: all 0.2s;
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .filter-input::placeholder {
@@ -456,9 +479,11 @@
             border: none;
             border-radius: 8px;
             font-size: 0.9em;
-            font-weight: 600;
+            font-weight: 700;
             cursor: pointer;
             transition: all 0.2s;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .btn-primary {
@@ -501,6 +526,8 @@
             background-clip: text;
             font-size: 2em;
             font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
         }
 
         .status-indicator {
@@ -525,6 +552,9 @@
         .status-text {
             color: rgba(255, 255, 255, 0.7);
             font-size: 0.9em;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
         .transactions-list {
@@ -552,7 +582,7 @@
             font-weight: 700;
             font-size: 0.85em;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 1.5px;
             cursor: pointer;
             user-select: none;
             position: relative;
@@ -614,15 +644,16 @@
             padding: 18px 20px;
             font-size: 0.95em;
             color: rgba(255, 255, 255, 0.9);
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .table-date {
-            font-family: 'Courier New', monospace;
             color: rgba(255, 255, 255, 0.7);
         }
 
         .table-source {
-            font-family: 'Courier New', monospace;
             color: rgba(255, 107, 53, 0.9);
             word-break: break-all;
         }
@@ -637,7 +668,6 @@
         }
 
         .table-tx-id {
-            font-family: 'Courier New', monospace;
             font-size: 0.85em;
         }
 
@@ -669,12 +699,52 @@
             font-size: 0.95em;
             color: #333;
             word-break: break-all;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-weight: 600;
+        }
+
+        .type-badge {
+            display: inline-block;
+            padding: 4px 12px;
+            border-radius: 6px;
+            font-size: 0.8em;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .type-badge.type-deposit {
+            background: rgba(76, 175, 80, 0.2);
+            color: #4caf50;
+            border: 1px solid rgba(76, 175, 80, 0.4);
+        }
+
+        .type-badge.type-refund {
+            background: rgba(244, 67, 54, 0.2);
+            color: #f44336;
+            border: 1px solid rgba(244, 67, 54, 0.4);
+        }
+
+        .type-badge.type-transfer {
+            background: rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.7);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .type-badge.type-unknown {
+            background: rgba(158, 158, 158, 0.2);
+            color: #9e9e9e;
+            border: 1px solid rgba(158, 158, 158, 0.4);
         }
 
         .empty-state {
             text-align: center;
             padding: 60px 20px;
             color: rgba(255, 255, 255, 0.5);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
         .empty-state svg {
