--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -13,6 +13,13 @@
             box-sizing: border-box;
         }
 
+        /* Typographic Scale - Base: 1rem (16px) */
+        /* Scale: 0.75, 0.875, 1, 1.125, 1.25, 1.5, 2, 2.5, 3, 4 */
+        
+        html {
+            font-size: 16px; /* Base font size */
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background: #0a0e27;
@@ -26,6 +33,8 @@
             text-transform: uppercase;
             font-weight: 600;
             letter-spacing: 0.5px;
+            font-size: 1rem; /* Base: 16px */
+            line-height: 1.5;
         }
 
         .container {
@@ -59,16 +68,16 @@
             background: rgba(255, 107, 53, 0.1);
             border: 1px solid rgba(255, 107, 53, 0.3);
             border-radius: 12px;
-            padding: 12px 16px;
-            font-size: 0.85em;
+            padding: 0.75rem 1rem;
+            font-size: 0.875rem; /* 14px */
             color: #ff6b35;
             text-align: right;
         }
 
         .presale-countdown-label {
-            font-size: 0.75em;
+            font-size: 0.75rem; /* 12px */
             opacity: 0.8;
-            margin-bottom: 4px;
+            margin-bottom: 0.25rem;
             text-transform: uppercase;
             letter-spacing: 1.5px;
             font-weight: 700;
@@ -76,7 +85,7 @@
 
         .presale-countdown-time {
             font-weight: 700;
-            font-size: 1.1em;
+            font-size: 1.125rem; /* 18px */
         }
 
         .join-presale-btn {
@@ -84,9 +93,9 @@
             color: #0a0e27;
             border: none;
             border-radius: 10px;
-            padding: 10px 20px;
+            padding: 0.625rem 1.25rem;
             font-weight: 700;
-            font-size: 0.9em;
+            font-size: 0.875rem; /* 14px */
             text-transform: uppercase;
             letter-spacing: 1px;
             cursor: pointer;
@@ -107,17 +116,18 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            margin-bottom: 15px;
-            font-size: 3em;
+            margin-bottom: 0.9375rem;
+            font-size: 3rem; /* 48px */
             font-weight: 800;
             letter-spacing: 0.5px;
             text-transform: uppercase;
+            line-height: 1.2;
         }
 
         .program-info {
             color: rgba(255, 255, 255, 0.7);
-            font-size: 0.9em;
-            margin-bottom: 20px;
+            font-size: 0.875rem; /* 14px */
+            margin-bottom: 1.25rem;
             word-break: break-all;
         }
 
@@ -146,26 +156,27 @@
         }
 
         .stat-card h3 {
-            font-size: 0.85em;
+            font-size: 0.75rem; /* 12px */
             color: rgba(255, 255, 255, 0.7);
-            margin-bottom: 12px;
+            margin-bottom: 0.75rem;
             text-transform: uppercase;
             letter-spacing: 1.5px;
             font-weight: 700;
         }
 
         .stat-card .value {
-            font-size: 2.8em;
+            font-size: 2.5rem; /* 40px */
             font-weight: 800;
-            margin-bottom: 8px;
+            margin-bottom: 0.5rem;
             background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            line-height: 1.1;
         }
 
         .stat-card .subtitle {
-            font-size: 0.85em;
+            font-size: 0.75rem; /* 12px */
             color: rgba(255, 255, 255, 0.6);
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -191,7 +202,7 @@
         }
 
         .progress-title {
-            font-size: 1.2em;
+            font-size: 1.25rem; /* 20px */
             color: rgba(255, 255, 255, 0.9);
             font-weight: 700;
             text-transform: uppercase;
@@ -199,22 +210,24 @@
         }
 
         .progress-amount {
-            font-size: 2.5em;
+            font-size: 2rem; /* 32px */
             font-weight: 800;
             background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            line-height: 1.2;
         }
 
         .progress-percentage {
-            font-size: 3em;
+            font-size: 3rem; /* 48px */
             font-weight: 800;
             background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            margin-bottom: 10px;
+            margin-bottom: 0.625rem;
+            line-height: 1.1;
         }
 
         .progress-bar-container {
@@ -273,8 +286,8 @@
         .progress-target {
             display: flex;
             justify-content: space-between;
-            margin-top: 15px;
-            font-size: 0.9em;
+            margin-top: 0.9375rem;
+            font-size: 0.875rem; /* 14px */
             color: rgba(255, 255, 255, 0.7);
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -297,11 +310,12 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            font-size: 1.5em;
+            font-size: 1.5rem; /* 24px */
             font-weight: 700;
-            margin-bottom: 20px;
+            margin-bottom: 1.25rem;
             text-transform: uppercase;
             letter-spacing: 1.5px;
+            line-height: 1.3;
         }
 
         .chart-container {
@@ -318,13 +332,13 @@
         }
 
         .timeframe-btn {
-            padding: 8px 16px;
+            padding: 0.5rem 1rem;
             background: rgba(255, 107, 53, 0.1);
             border: 1px solid rgba(255, 107, 53, 0.3);
             border-radius: 8px;
             color: rgba(255, 255, 255, 0.9);
             cursor: pointer;
-            font-size: 0.9em;
+            font-size: 0.875rem; /* 14px */
             font-weight: 700;
             transition: all 0.3s ease;
             text-transform: uppercase;
@@ -347,9 +361,9 @@
         .chart-legend {
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-top: 15px;
-            font-size: 0.85em;
+            gap: 1.25rem;
+            margin-top: 0.9375rem;
+            font-size: 0.75rem; /* 12px */
             color: rgba(255, 255, 255, 0.7);
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -380,9 +394,9 @@
         }
 
         .progress-info-label {
-            font-size: 0.85em;
+            font-size: 0.75rem; /* 12px */
             color: rgba(255, 255, 255, 0.6);
-            margin-bottom: 8px;
+            margin-bottom: 0.5rem;
             text-transform: uppercase;
             letter-spacing: 1.5px;
             font-weight: 700;
@@ -408,9 +422,9 @@
         
         .transactions-count {
             color: rgba(255, 255, 255, 0.7);
-            font-size: 0.9em;
-            margin-bottom: 15px;
-            padding-bottom: 15px;
+            font-size: 0.875rem; /* 14px */
+            margin-bottom: 0.9375rem;
+            padding-bottom: 0.9375rem;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -435,9 +449,9 @@
         }
 
         .filter-label {
-            font-size: 0.85em;
+            font-size: 0.75rem; /* 12px */
             color: rgba(255, 255, 255, 0.7);
-            margin-bottom: 10px;
+            margin-bottom: 0.625rem;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1.5px;
@@ -445,11 +459,11 @@
 
         .filter-input,
         .filter-select {
-            padding: 12px 16px;
+            padding: 0.75rem 1rem;
             background: rgba(15, 23, 42, 0.8);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 10px;
-            font-size: 0.9em;
+            font-size: 0.875rem; /* 14px */
             color: #ffffff;
             transition: all 0.2s;
             text-transform: uppercase;
@@ -475,10 +489,10 @@
         }
 
         .btn {
-            padding: 10px 20px;
+            padding: 0.625rem 1.25rem;
             border: none;
             border-radius: 8px;
-            font-size: 0.9em;
+            font-size: 0.875rem; /* 14px */
             font-weight: 700;
             cursor: pointer;
             transition: all 0.2s;
@@ -524,10 +538,11 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            font-size: 2em;
+            font-size: 2rem; /* 32px */
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1.5px;
+            line-height: 1.3;
         }
 
         .status-indicator {
@@ -551,7 +566,7 @@
 
         .status-text {
             color: rgba(255, 255, 255, 0.7);
-            font-size: 0.9em;
+            font-size: 0.875rem; /* 14px */
             text-transform: uppercase;
             letter-spacing: 1px;
             font-weight: 600;
@@ -577,10 +592,10 @@
         }
 
         .transactions-table th {
-            padding: 18px 20px;
+            padding: 1.125rem 1.25rem;
             text-align: left;
             font-weight: 700;
-            font-size: 0.85em;
+            font-size: 0.75rem; /* 12px */
             text-transform: uppercase;
             letter-spacing: 1.5px;
             cursor: pointer;
@@ -641,8 +656,8 @@
         }
 
         .transactions-table td {
-            padding: 18px 20px;
-            font-size: 0.95em;
+            padding: 1.125rem 1.25rem;
+            font-size: 0.875rem; /* 14px */
             color: rgba(255, 255, 255, 0.9);
             text-transform: uppercase;
             font-weight: 600;
@@ -668,7 +683,7 @@
         }
 
         .table-tx-id {
-            font-size: 0.85em;
+            font-size: 0.75rem; /* 12px */
         }
 
         .table-tx-id a {
@@ -688,15 +703,15 @@
         }
 
         .detail-label {
-            font-size: 0.75em;
+            font-size: 0.75rem; /* 12px */
             color: #999;
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            margin-bottom: 5px;
+            margin-bottom: 0.3125rem;
         }
 
         .detail-value {
-            font-size: 0.95em;
+            font-size: 0.875rem; /* 14px */
             color: #333;
             word-break: break-all;
             text-transform: uppercase;
@@ -740,11 +755,12 @@
 
         .empty-state {
             text-align: center;
-            padding: 60px 20px;
+            padding: 3.75rem 1.25rem;
             color: rgba(255, 255, 255, 0.5);
             text-transform: uppercase;
             letter-spacing: 1px;
             font-weight: 600;
+            font-size: 0.875rem; /* 14px */
         }
 
         .empty-state svg {
