--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -613,7 +613,7 @@
         .transactions-table th.sortable::after {
             content: ' ↕';
             opacity: 0.4;
-            font-size: 0.8em;
+            font-size: 0.8rem; /* 12.8px */
             color: rgba(255, 107, 53, 0.6);
         }
 
@@ -723,7 +723,7 @@
             display: inline-block;
             padding: 4px 12px;
             border-radius: 6px;
-            font-size: 0.8em;
+            font-size: 0.8rem; /* 12.8px */
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -791,7 +791,7 @@
 
         @media (max-width: 768px) {
             .header h1 {
-                font-size: 1.8em;
+                font-size: 1.8rem; /* 28.8px on mobile */
             }
 
             .stats-grid {
@@ -834,7 +834,7 @@
                     </div>
                     <div class="progress-info-item">
                         <div class="progress-info-label">Target Amount</div>
-                        <div class="progress-amount" style="font-size: 2em;">$4,000,000</div>
+                        <div class="progress-amount" style="font-size: 2rem;">$4,000,000</div>
                     </div>
                 </div>
                 <div style="text-align: center;">
