--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -67,11 +67,16 @@
         .presale-countdown {
             background: rgba(255, 107, 53, 0.1);
             border: 1px solid rgba(255, 107, 53, 0.3);
-            border-radius: 12px;
-            padding: 0.75rem 1rem;
+            border-radius: 10px;
+            padding: 0.625rem 1.25rem;
             font-size: 0.875rem; /* 14px */
             color: #ff6b35;
             text-align: right;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+            min-height: 2.5rem; /* Match button height */
         }
 
         .presale-countdown-label {
@@ -101,7 +106,10 @@
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
-            display: inline-block;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            height: 2.5rem;
             box-shadow: 0 4px 15px rgba(255, 107, 53, 0.3);
         }
 
@@ -117,7 +125,7 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             margin-bottom: 0.9375rem;
-            font-size: 3rem; /* 48px */
+            font-size: 2rem; /* 32px - reduced from 48px */
             font-weight: 800;
             letter-spacing: 0.5px;
             text-transform: uppercase;
@@ -165,7 +173,7 @@
         }
 
         .stat-card .value {
-            font-size: 2.5rem; /* 40px */
+            font-size: 2rem; /* 32px - reduced from 40px */
             font-weight: 800;
             margin-bottom: 0.5rem;
             background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
@@ -210,7 +218,7 @@
         }
 
         .progress-amount {
-            font-size: 2rem; /* 32px */
+            font-size: 1.5rem; /* 24px - reduced from 32px */
             font-weight: 800;
             background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
             -webkit-background-clip: text;
@@ -220,14 +228,17 @@
         }
 
         .progress-percentage {
-            font-size: 3rem; /* 48px */
+            font-size: 1.25rem; /* 20px - reduced from 48px, will be inside bar */
             font-weight: 800;
-            background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            margin-bottom: 0.625rem;
-            line-height: 1.1;
+            color: #0a0e27;
+            margin-bottom: 0;
+            line-height: 1;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 10;
+            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
         }
 
         .progress-bar-container {
@@ -240,6 +251,11 @@
             margin-top: 20px;
             position: relative;
             box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+        
+        .progress-bar-container-wrapper {
+            position: relative;
+            width: 100%;
         }
 
         .progress-bar-fill {
@@ -538,7 +554,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            font-size: 2rem; /* 32px */
+            font-size: 1.5rem; /* 24px - reduced from 32px */
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1.5px;
