Update countdown HTML to use spans for single-line layout

--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -831,8 +831,8 @@
         <div class="header">
             <div class="header-top-right">
                 <div class="presale-countdown">
-                    <div class="presale-countdown-label">Presale Ends</div>
-                    <div class="presale-countdown-time" id="presaleEndCountdown">--:--:--:--</div>
+                    <span class="presale-countdown-label">Presale Ends</span>
+                    <span class="presale-countdown-time" id="presaleEndCountdown">--:--:--:--</span>
                 </div>
                 <a href="https://app.legion.cc?homie=E2EFA43C" target="_blank" rel="noopener noreferrer" class="join-presale-btn">
                     Join Presale
