Prevent Apply Filters button text from wrapping to multiple lines

--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -515,6 +515,7 @@
             transition: all 0.2s;
             text-transform: uppercase;
             letter-spacing: 1px;
+            white-space: nowrap;
         }
 
         .btn-primary {
