--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -419,6 +419,58 @@
             font-weight: 700;
         }
 
+        .credit-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 0.75rem;
+            padding: 1.5rem;
+            margin: 20px;
+            background: rgba(15, 23, 42, 0.4);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            border-radius: 16px;
+        }
+
+        .credit-text {
+            font-size: 0.875rem; /* 14px */
+            color: rgba(255, 255, 255, 0.6);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
+        }
+
+        .twitter-follow-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.625rem 1.25rem;
+            background: #1da1f2;
+            color: #ffffff;
+            border: none;
+            border-radius: 10px;
+            font-size: 0.875rem; /* 14px */
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(29, 161, 242, 0.3);
+        }
+
+        .twitter-follow-btn:hover {
+            background: #1a91da;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(29, 161, 242, 0.5);
+        }
+
+        .twitter-follow-btn svg {
+            width: 16px;
+            height: 16px;
+        }
+
         .main-content {
             display: grid;
             grid-template-columns: 1fr;
