--- a/usdc_dashboard.html
+++ b/usdc_dashboard.html
@@ -427,10 +427,11 @@
             gap: 0.75rem;
             padding: 1.5rem;
             margin: 20px;
-            background: rgba(15, 23, 42, 0.4);
+            background: rgba(15, 23, 42, 0.8);
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 16px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
         }
 
         .credit-text {
